--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
 </head>
 <body>
   <form id="interview-form" class="form-container">
-    <div class="form-group">
-      <label>メールアドレス<span class="required">*</span></label>
-      <input type="email" name="email" required placeholder="例：example@example.com">
-    </div>
+  <div class="form-group">
+  <label>0. メールアドレスを教えてください<span class="required">*</span></label>
+  <input type="email" name="email" required placeholder="例：example@example.com">
+</div>
+
     <div class="form-group">
       <label>1. お名前<span class="required">*</span></label>
       <input type="text" name="name" required placeholder="回答を入力">
