--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       max-width: 700px;
       margin: 2em auto;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      border: 1px solid #ccc;
     }
     h1 {
       font-size: 1.8em;
@@ -126,6 +127,8 @@
     <p>以下のフォームにご記入いただけましたら、担当者より24時間以内にご連絡させていただきます。</p>
     <p class="note">* 必須の質問です</p>
   </div>
+</body>
+</html>
 
   <form id="interview-form" class="form-container" action="https://formspree.io/f/myzjybba" method="POST">
     <div class="form-group">
